Database fully created, gui created, login and registration implemented

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,18 @@
-/MySQLAccess.class
-/de/
-/FirstExample.class
-/SQLconnection.class
+/ui.class
+/ui$1.class
+/TabbedPaneExample.class
+/uni_GCUBake/
+/ui$2.class
+/ui$3.class
+/ui$4.class
+/customerUI$1.class
+/customerUI.class
+/customerUI$2.class
+/customerUI$3.class
+/customerUI$4.class
+/chefUI$1.class
+/chefUI.class
+/chefUI$2.class
+/chefUI$3.class
+/chefUI$4.class
+/returnObject.class
